# NoteService

./: README.md  app.dockerfile  docker-compose.yml  env.example  pyproject.toml
app/: main.py
app/api/v1/: deps.py  routers.py
app/api/v1/endpoints/: auth.py  note.py  user.py
app/bot/: loader.py  main.py
app/bot/handlers/: note.py  routing.py  start.py
app/bot/keyboards/: reply.py
app/bot/middlewares/: throttling.py
app/core/: config.py  container.py  logger.py
app/db/: __init__.py
app/db/models/: base_mixins.py  note.py  refresh.py  tag.py  user.py
app/repositories/: __init__.py  base.py  note.py  refresh.py  tag.py  user.py
app/schemas/: auth.py  mixins.py  note.py  tag.py  user.py
app/services/: __init__.py  jwt.py  mixins.py  note.py  tag.py  telegram.py  user.py
app/utils/: auth.py  hashers.py  http.py  pagination.py
migrations/versions/: 5aa73674ce67_remove_email_from_users.py  735e751c4aaa_initial.py
